--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,6 @@ cmake_minimum_required(VERSION 2.8)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
-set(LIB_NAME ${CMAKE_PROJECT_NAME})
-
 find_package(PkgConfig)
 
 pkg_check_modules(DEPS REQUIRED
@@ -20,7 +18,7 @@ include(ValaVersion)
 ensure_vala_version("0.26" MINIMUM)
 
 include(ValaPrecompile)
-vala_precompile(VALA_C ${LIB_NAME}
+vala_precompile(VALA_C ${CMAKE_PROJECT_NAME}
   src/Command.vala
   src/CommandExtractor.vala
   src/CommandList.vala
@@ -28,6 +26,7 @@ vala_precompile(VALA_C ${LIB_NAME}
   src/Keybinder.vala
   src/Module.vala
   src/PopupWindow.vala
+  src/Service.vala
   src/Utilities.vala
 PACKAGES
   gtk+-3.0>=3.16
@@ -37,5 +36,11 @@ PACKAGES
 include(GSettings)
 add_schema(data/com.worldwidemann.plotinus.gschema.xml)
 
-add_library(${LIB_NAME} SHARED ${VALA_C})
-install(TARGETS ${LIB_NAME} LIBRARY DESTINATION lib)
+add_executable(dbus_service ${VALA_C})
+add_library(gtk_module SHARED ${VALA_C})
+
+set_target_properties(dbus_service gtk_module PROPERTIES OUTPUT_NAME ${CMAKE_PROJECT_NAME})
+
+install(TARGETS dbus_service gtk_module
+        RUNTIME DESTINATION bin
+        LIBRARY DESTINATION lib)
